[repo] Use NetMinimumSupportedVersion

--- a/examples/wcf/shared/Examples.Wcf.Shared.csproj
+++ b/examples/wcf/shared/Examples.Wcf.Shared.csproj
@@ -4,12 +4,12 @@
     <TargetFrameworks>$(DefaultTargetFrameworkForExampleApps);$(NetFrameworkMinimumSupportedVersion)</TargetFrameworks>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net462'">
+  <ItemGroup Condition="'$(TargetFramework)' == '$(NetFrameworkMinimumSupportedVersion)'">
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+  <ItemGroup Condition="'$(TargetFramework)' == '$(DefaultTargetFrameworkForExampleApps)'">
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.7.0" />
   </ItemGroup>
 
