--- a/src/OpenTelemetry.Resources.Process/OpenTelemetry.Resources.Process.csproj
+++ b/src/OpenTelemetry.Resources.Process/OpenTelemetry.Resources.Process.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <!-- OmniSharp/VS Code requires TargetFrameworks to be in descending order for IntelliSense and analysis. -->
-    <TargetFrameworks>net8.0;$(NetStandardMinimumSupportedVersion)</TargetFrameworks>
+    <TargetFrameworks>$(NetMinimumSupportedVersion);$(NetStandardMinimumSupportedVersion)</TargetFrameworks>
     <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);$(NetFrameworkMinimumSupportedVersion)</TargetFrameworks>
     <Description>OpenTelemetry Resource Detectors for Process.</Description>
     <MinVerTagPrefix>Resources.Process-</MinVerTagPrefix>
